--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
     background-image: url(bg.jpg);
     background-size: cover;
     background-attachment: fixed;
-    background-blend-mode: darken;
-    background-color: #222;
+    background-blend-mode: soft-light;
+    background-color: #111;
     color: #EEE;
     text-align: center;
     padding: 2em 0;
