--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ h2 { color: #3DDC84 }
 
 h3 { color: lightskyblue }
 
+center > div {
+    padding-top: 1em;
+    max-width: 20em;
+}
+
 a {
     color: tomato;
     padding: 0.3em;
@@ -41,6 +46,24 @@ a:hover {
 }
 
 i { opacity: 0.5; }
+
+table {
+    border:none;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+th {
+    border:none;
+    text-align:right;
+    vertical-align:top;
+}
+
+td {
+    opacity:0.5;
+    border:none;
+    text-align:left;
+}
 
 ul {
     padding: 1em;
