Added dynamic background and blur

--- a/theme/style.css
+++ b/theme/style.css
@@ -15,6 +15,7 @@
 }
 
 body {
+    background-size:cover;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -74,5 +75,6 @@ a:hover {
 #flutter,
 #other,
 #projects {
+    backdrop-filter: blur(10px); 
     transition-duration: 2s;
 }
