--- a/theme/style.css
+++ b/theme/style.css
@@ -16,6 +16,8 @@
 
 body {
     background-size:cover;
+    background-position:fixed;
+    background-repeat:no-repeat;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
